crates/ditto-checker/tests/golden/type-errors/not_a_function_0.ditto
module Test exports (..);

identity_int = fn (n : Int) -> n;

huh  = identity_int(5)();
